fix mapper and ad card sorting